--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-
-<nav class="nav">
-  <a routerLink='about' >about</a>
-  <a routerLink='home'>home</a>
-</nav>
+<app-nav></app-nav>
 
 <div class="container">
   <router-outlet></router-outlet>
 </div>
+
 <footer>
   <p>Footer</p>
 </footer>
