--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="center">
     <h1>About</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit dolores aperiam deleniti? Laudantium, facere qui. Dicta reprehenderit, obcaecati dolores sint incidunt aspernatur quasi iure explicabo aliquid! Quam veniam sed cum?</p>
+    <app-menu></app-menu>
 </div>
