--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="center">
     <h1>Home</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dicta dolor fugit ipsa quidem quo natus consequatur, accusantium beatae eveniet corporis mollitia? Nihil, corporis. Nobis quis vitae sint dignissimos aut.</p>
+    <p>  accusantium beatae eveniet corporis mollitia? Nihil, corporis. Nobis quis vitae sint dignissimos aut.</p>
+    <p>  accusantium beatae eveniet corporis mollitia? Nihil, corporis. Nobis quis vitae sint dignissimos aut.</p>
 </div>
