--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,12 @@
 <div class="center">
     <h1>Home</h1>
+    <div class="form">
+        <label>name</label>
+        <input type="text" placeholder="name" #name>
+        <label>url</label>
+        <input type="text" placeholder="url" #url>
+        <button mat-raised-button color="primary" (click)="addUser(name.value,url.value)">Add</button>
+    </div>
     <p>  accusantium beatae eveniet corporis mollitia? Nihil, corporis. Nobis quis vitae sint dignissimos aut.</p>
     <p>  accusantium beatae eveniet corporis mollitia? Nihil, corporis. Nobis quis vitae sint dignissimos aut.</p>
 </div>
