--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,3 +2,12 @@
     width: 100%;
     margin: 0 auto;
 }
+.form {
+    width: 200px;
+    min-height:100px;
+    input,
+    label {
+        display: block;
+        margin: 10px 0;
+    }
+}
