--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="center">
     <h1>Home</h1>
+    <!-- put some data to the store -->
     <div class="form">
         <label>name</label>
         <input type="text" placeholder="name" #name>
