--- a/src/app/sherd/menu/menu.component.html
+++ b/src/app/sherd/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div>
    <mat-tab-group mat-align-tabs="start" backgroundColor="primary" >
-    <mat-tab label="First" > 
+    <mat-tab label="My" > 
         <div class="content">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -8,7 +8,7 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div> 
     </mat-tab>
-    <mat-tab label="Second" >
+    <mat-tab label="My Experience" >
         <div class="content">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -16,7 +16,7 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
     </div> 
     </mat-tab>
-    <mat-tab label="Third">
+    <mat-tab label="My Skills">
         <div class="content">
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
