--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,7 +3,7 @@
     <!-- do out on page from store -->
     <div *ngFor="let user of users$ |async">
         <p>{{user.name}}</p>
-        <p><a href={{user.url}}>{{user.url}}</a></p>
+        <p><a href="{{user.url}}">{{user.url}}</a></p>
         <button mat-raised-button color="warn" (click)="delUser(user.name)" >delete</button>
     </div>
     <app-menu></app-menu>
