--- a/src/app/sherd/nav/nav.component.html
+++ b/src/app/sherd/nav/nav.component.html
@@ -1,5 +1,6 @@
 
 <nav class="nav">
-    <a routerLink='about'>about</a>
-    <a routerLink='home'>home</a>
+    <a routerLink='/about'>about</a>
+    <a routerLink='/home'>home</a>
+    <a routerLink='/main'>main</a>
 </nav>
